# microservice_mvp

./: Cargo.toml  Dockerfile  README.md  build.rs  config  docker_build.sh
proto/: event_svc.proto
src/: configuration.rs  db.rs  error.rs  main.rs  transport.rs
test/: config1  config2  config3
