[package]
name = "microservice_mvp"
version = "0.1.0"
authors = ["super-horst <super-horst@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# config
confy = "0.4.0"
serde = { version = "1.0", features = ["derive"] }

# logging
log = "0.4.8"
env_logger = "0.7.1"
tracing = "0.1.19"
tracing-futures = "0.2.4"

# async runtime
tokio = "0.2.22"
async-trait = "0.1.33"

# transport layer
tonic = "0.2.1"
prost = "0.6.1"

# db layer
oxidizer = "0.2.1"

#util
rand = "0.7.3"
failure = "0.1.8"
chrono = "0.4.15"

[build-dependencies]
tonic-build = "0.2.0"

[profile.release]
opt-level = "s"
